tests/rascal/negative/name_errors/L3/2_undef-type-form.ob
MODULE Bla;

PROCEDURE F(x: X);
BEGIN
  x := 1
END F;

BEGIN
  F(3)
END Bla.